feat(Auth): add github oauth authetication

--- a/PiBlog/appsettings.json
+++ b/PiBlog/appsettings.json
@@ -7,7 +7,20 @@
     }
   },
   "AllowedHosts": "*",
-
+  "SqliteConnectionString": "Data Source=PiBlog.db",
+  "ApiVersion": "1.0.0",
+  "JWT": {
+    "Domain": "https://localhost:5001",
+    "SecurityKey": "[SecurityKey]",
+    "Expires": 30
+  },
+  "Github": {
+    "Id": 0,
+    "ClientID": "[ClientID]",
+    "ClientSecret": "[ClientSecret]",
+    "RedirectUri": "[RedirectUri]",
+    "ApplicationName": "PiBlog"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=PiBlog.db;"
   }
