--- a/PiBlog/PiBlog.csproj
+++ b/PiBlog/PiBlog.csproj
@@ -6,6 +6,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0"/>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="3.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1"/>
   </ItemGroup>
 </Project>
